   sudoers file had specified a directory.

 * "visudo -c" will now list any include files that were checked
   in addition to the main sudoers file when everything parses OK.

 * Users that only have read-only access to the sudoers file may
   now run "visudo -c".  Previously, write permissions were required
   even though no writing is down in check-only mode.

What's new in Sudo 1.8.3p1?

 * Fixed a crash in the monitor process on Solaris when NOPASSWD
   was specified or when authentication was disabled.
 
 * Fixed matching of a Runas_Alias in the group section of a
   Runas_Spec.

What's new in Sudo 1.8.3?

 * Fixed expansion of strftime() escape sequences in the "log_dir"
   sudoers setting.

 * Esperanto, Italian and Japanese translations from translationproject.org.

 * Sudo will now use PAM by default on AIX 6 and higher.

 * Added --enable-werror configure option for gcc's -Werror flag.

 * Visudo no longer assumes all editors support the +linenumber
   command line argument.  It now uses a whitelist of editors known
   to support the option.

 * Fixed matching of network addresses when a netmask is specified
   but the address is not the first one in the CIDR block.

 * The configure script now check whether or not errno.h declares
   the errno variable.  Previously, sudo would always declare errno
   itself for older systems that don't declare it in errno.h.

 * The NOPASSWD tag is now honored for denied commands too, which
   matches historic sudo behavior (prior to sudo 1.7.0).

 * Sudo now honors the "DEREF" setting in ldap.conf which controls
   how alias dereferencing is done during an LDAP search.

 * A symbol conflict with the pam_ssh_agent_auth PAM module that
   would cause a crash been resolved.

 * The inability to load a group provider plugin is no longer
   a fatal error.

 * A potential crash in the utmp handling code has been fixed.

 * Two PAM session issues have been resolved.  In previous versions